# FacePlayground

./: CMakeLists.txt
cmake/: ProjectConfig.cmake.in  clang_cross_toolchain.cmake  code_revision.cmake.in  darwin_toolchain.cmake  dependencies.cmake.in  fedora_toolchain.cmake  patchelf.cmake.in
compiletime_config/: CMakeLists.txt  code_revision.cpp.in  config.h.in
src/Incubator/: CMakeLists.txt  license.h
src/tracker/: CMakeLists.txt  main.cpp
