SET (TARGET_NAME incubator)

SET (INCUBATOR_SOURCE_FILES
    main.cpp
    ${CODE_REVISION_SOURCE_FILE})

SET_SOURCE_FILES_PROPERTIES (${CODE_REVISION_SOURCE_FILE} PROPERTIES GENERATED 1)
SET (INCUBATOR_LINK_LIBRARIES FACESDK_LIBRARY dl)

ADD_EXECUTABLE (${TARGET_NAME} ${INCUBATOR_SOURCE_FILES})
SET_TARGET_PROPERTIES (${TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
ADD_DEPENDENCIES (${TARGET_NAME} _generate_code_revision)

TARGET_LINK_LIBRARIES (${TARGET_NAME} ${INCUBATOR_LINK_LIBRARIES})
LIST(APPEND DEPENDENCIES_SEARCH_DIR "")
INSTALL_TARGET_AND_ITS_DEPENDENCIES (${TARGET_NAME} bin libexec "${DEPENDENCIES_SEARCH_DIR}" TRUE)


